package Appliances;

public class Recess {
    private boolean stuckOut;

    public Recess() {

    }

    public boolean isStuckOut() {
        return stuckOut;
    }

    public void setStuckOut(boolean stuckOut) {
        this.stuckOut = stuckOut;
    }


}

