package RootOfModel;

public enum Gender {MALE,FEMALE}
